<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.GameActivity">

    <ImageView
        android:src="@drawable/bg_game"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bg_game_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <TextView
        android:id="@+id/tv_status_game"
        android:textAlignment="center"
        android:textSize="@dimen/_32ssp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:fontFamily="@font/pixelated_font"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/text_you_win" />

    <ImageView
        android:id="@+id/iv_arrow_up"
        android:src="@drawable/ic_arrow_up"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:contentDescription="@string/arrow_up_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp" />

    <ImageView
        android:id="@+id/iv_arrow_down"
        android:src="@drawable/ic_arrow_down"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:contentDescription="@string/arrow_down_description"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_up"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp" />
    
    <TextView
        android:id="@+id/tv_action_game"
        android:layout_width="0dp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/pixelated_font"
        android:gravity="center"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_32ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_arrow_down"
        tools:text="@string/text_start" />

    <LinearLayout
        android:id="@+id/ll_player"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/iv_player_top"
            tools:src="@drawable/ic_cowboy_left_shoot_false"
            android:contentDescription="@string/player_top_description"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"/>

        <ImageView
            android:id="@+id/iv_player_middle"
            tools:src="@drawable/ic_cowboy_left_shoot_false"
            android:contentDescription="@string/player_middle_description"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"/>

        <ImageView
            android:id="@+id/iv_player_bottom"
            tools:src="@drawable/ic_cowboy_left_shoot_false"
            android:contentDescription="@string/player_bottom_description"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bot"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_arrow_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/iv_bot_top"
            tools:src="@drawable/ic_cowboy_right_shoot_false"
            android:contentDescription="@string/bot_top_description"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"/>

        <ImageView
            android:id="@+id/iv_bot_middle"
            tools:src="@drawable/ic_cowboy_right_shoot_false"
            android:contentDescription="@string/bot_middle_description"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"/>

        <ImageView
            android:id="@+id/iv_bot_bottom"
            tools:src="@drawable/ic_cowboy_right_shoot_false"
            android:contentDescription="@string/bot_bottom_description"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>